// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DsSlider > Component Integration > should match snapshot with default configuration > dsslider-default 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Default snapshot"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Component Integration > should match snapshot with focus state > dsslider-focus 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Focus snapshot"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Component Integration > should match snapshot with hover state > dsslider-hover 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Hover snapshot"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshot for default state > slider-default 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Default snapshot"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshot for disabled state > slider-disabled 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root Mui-disabled MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb Mui-disabled MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb Mui-disabled MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Disabled slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        disabled=""
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshot for range slider > slider-range 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 20%; width: 60%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 20%;"
    >
      <input
        aria-label="Range slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="20"
      />
    </span>
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="1"
      style="left: 80%;"
    >
      <input
        aria-label="Range slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="80"
        data-index="1"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="80"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshot with marks > slider-marks 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-marked MuiSlider-colorSecondary MuiSlider-sizeMedium css-l6h8ny-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-mark MuiSlider-markActive css-u4m4bm-MuiSlider-mark"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-ddara7-MuiSlider-markLabel"
      data-index="0"
      style="left: 0%;"
    >
      Start
    </span>
    <span
      class="MuiSlider-mark css-7zvo1-MuiSlider-mark"
      data-index="1"
      style="left: 50%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel css-ydsgv7-MuiSlider-markLabel"
      data-index="1"
      style="left: 50%;"
    >
      Middle
    </span>
    <span
      class="MuiSlider-mark css-7zvo1-MuiSlider-mark"
      data-index="2"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabel css-ydsgv7-MuiSlider-markLabel"
      data-index="2"
      style="left: 100%;"
    >
      End
    </span>
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Marks slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshot with value labels > slider-value-labels 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 75%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 75%;"
    >
      <input
        aria-label="Value label slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="75"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabelOpen MuiSlider-valueLabel css-wid7oc-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            75
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all color variants > slider-color-error 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorError MuiSlider-sizeMedium css-lh76wg-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorError MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorError css-zuxus9-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="error slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all color variants > slider-color-info 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorInfo MuiSlider-sizeMedium css-1i72bed-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorInfo MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorInfo css-1gcubzn-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="info slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all color variants > slider-color-primary 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-134mnzw-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-15weugv-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="primary slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all color variants > slider-color-secondary 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="secondary slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all color variants > slider-color-success 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSuccess MuiSlider-sizeMedium css-1cyq8l-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSuccess MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSuccess css-155klj5-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="success slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all color variants > slider-color-warning 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorWarning MuiSlider-sizeMedium css-2j163x-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorWarning MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorWarning css-rp0a99-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="warning slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all size variants > slider-size-medium 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="medium slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all size variants > slider-size-small 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeSmall css-8atrnk-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-q1kvpd-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeSmall MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeSmall MuiSlider-thumbColorSecondary css-1370cc6-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="small slider"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all themes > slider-theme-dark 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="dark"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Theme test"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all themes > slider-theme-highContrast 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="highContrast"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Theme test"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`DsSlider > Snapshot Testing > should match snapshots for all themes > slider-theme-light 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium css-wn2kq1-MuiSlider-root"
    ds-mode="true"
  >
    <span
      class="MuiSlider-rail css-18tnt1k-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track css-u91b89-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-oug17z-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="Theme test"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;
